--- a/views/pages/analytics.ejs
+++ b/views/pages/analytics.ejs
@@ -124,4 +124,18 @@
             </div>
         </div>
     </div>
+
+    <!-- Sector Distribution -->
+    <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="mb-0">Sector Distribution</h5>
+                </div>
+                <div class="card-body">
+                    <canvas id="sectorChart" height="100"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
