--- a/views/pages/watchlist.ejs
+++ b/views/pages/watchlist.ejs
@@ -39,7 +39,7 @@
                                         <div class="col-6">
                                             <small class="text-muted">Added</small>
                                             <div class="small">
-                                                <%= new Date(stock.added_at).toLocaleDateString() %>
+                                                <%= new Date(stock.added_date).toLocaleDateString() %>
                                             </div>
                                         </div>
                                     </div>
