--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,6 +16,8 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-sVdOGcfvU1g3Xf1OnrUZWc7aA2cED5PkgiMSDNXit7sCFHjwzvKwPEbJ2tInD92agDXmAqlLz0HFQ9RDb2b6mw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <%- include('../partials/header') %>
