--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -58,7 +58,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <h5 class="mb-0">Companies</h5>
                         <button class="btn btn-sm btn-outline-primary" id="refreshCompanies">
-                            <i class="bi bi-arrow-clockwise"></i>
+                            <i class="fa fa-sync"></i>
                         </button>
                     </div>
                     <div class="mt-3">
