--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -48,9 +48,9 @@
                 </div>
                 
                 <!-- Theme Toggle -->
-                <button class="btn btn-outline-secondary btn-sm" id="themeToggle" title="Toggle theme">
+                <!-- <button class="btn btn-outline-secondary btn-sm" id="themeToggle" title="Toggle theme">
                     <i class="bi bi-sun"></i>
-                </button>
+                </button> -->
             </div>
         </div>
     </div>
